# abrt

./: .dir-locals.el  .git-commit-template  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  HACKING.md  INSTALL  INSTALL.md  Makefile.am  README  README.md  abrt-ccpp.init  abrt-doxygen.cfg  abrt-oops.init  abrt-utils.pc.in  abrt-vmcore.init  abrt.init  abrt.pc.in  abrt.spec  abrt.spec.in  asciidoc.conf  autogen.sh  config.mak  configure.ac  crash-catcher.init  crash-catcher.spec  gen-version  pylintrc  zanata.xml
btparser/: ChangeLog  Makefile.am  NEWS  README  TODO  btparser.1  btparser.c  btparser.pc.in  btparser.spec.in  configure.ac
btparser/lib/: Makefile.am  frame.c  normalize.c  normalize_xorg.c  strbuf.c  thread.c  thread.h  utils.h
btparser/tests/: Makefile.am  atlocal.in  frame.at  package.m4  testsuite.at  thread.at
doc/: CCpp.conf.txt  ChangeLog  CodingStyle  DESIGN  HOW_TO_TEST  IMPLEMENTATION  INSTALL  INTERPRETED_LANGUAGES  MCE_readme.txt  Makefile.am  PLUGINS-HOWTO  README  README_deployment  TODO_crash_dump_fields  abrt-CCpp.conf.txt  abrt-CCpp.conf.txt.in  abrt-action-analyze-backtrace.txt  abrt-action-analyze-c.txt  abrt-action-analyze-ccpp-local.txt  abrt-action-analyze-core.txt  abrt-action-analyze-oops.txt  abrt-action-analyze-python.txt  abrt-action-analyze-vmcore.txt  abrt-action-analyze-vulnerability.txt  abrt-action-analyze-xorg.txt  abrt-action-check-oops-for-hw-error.txt  abrt-action-find-bodhi-update.txt  abrt-action-generate-backtrace.txt  abrt-action-generate-core-backtrace.txt  abrt-action-install-debuginfo.txt  abrt-action-list-dsos.txt  abrt-action-notify.txt  abrt-action-perform-ccpp-analysis.txt  abrt-action-save-kernel-data.txt  abrt-action-save-package-data.conf.txt  abrt-action-save-package-data.txt  abrt-action-trim-files.txt  abrt-applet.txt  abrt-auto-reporting-authenticated.txt  abrt-auto-reporting-unauthenticated.txt  (+52 more)
doc/abrt-plugin/: HelloWorld.conf  Makefile  abrt-reporter-hello-world.cpp  abrt-reporter-hello-world.h
doc/dbus-configuration/: Makefile.am  com.redhat.problems.configuration.abrt.xml.in  com.redhat.problems.configuration.ccpp.xml.in  com.redhat.problems.configuration.oops.xml.in  com.redhat.problems.configuration.python.xml.in  com.redhat.problems.configuration.python3.xml.in  com.redhat.problems.configuration.vmcore.xml.in  com.redhat.problems.configuration.xml.in  com.redhat.problems.configuration.xorg.xml.in
doc/deployment/: 1_build.sh  2_convert_images_to_embedded_data.sh  3_upload_to_fedorahosted_abrt.sh  publican.cfg
doc/problems-service/: Makefile.am  docbook-params.xsl  org.freedesktop.Problems.xml.in  specification.xml.in
doc/project/: abrt-bugs-per-component-cdf.gnuplot  abrt-bugs-per-component.gnuplot  abrt.tex  client-ui.ep  server-ui.ep
icons/: Makefile.am
icons/48/: Makefile.am
inc/: ABRTException.h  Action.h  Analyzer.h  CrashTypes.h  CrashTypesSocket.h  Database.h  Makefile.am  Plugin.h  abrt_exception.h  abrt_types.h  abrt_xmlrpc.h  abrtlib.h  analyzer.h  comm_layer_inner.h  crash_types.h  database.h  debug_dump.h  dump_dir.h  observer.h  plugin.h  reporter.h  xfuncs.h
lib/CommLayer/: CommLayer.h  CommLayerClientDBus.cpp  CommLayerClientDBus.h  CommLayerInner.cpp  CommLayerInner.h  CommLayerServer.cpp  CommLayerServer.h  CommLayerServerDBus.cpp  CommLayerServerDBus.h  CommLayerServerSocket.cpp  CommLayerServerSocket.h  DBusClientProxy.cpp  DBusClientProxy.h  DBusCommon.h  DBusServerProxy.cpp  DBusServerProxy.h  Makefile.am  Observer.h  SocketCrashTypes.h
lib/DBus/: DBusClient.cpp  DBusClient.h  DBusClientProxy.h  DBusCommon.h  DBusManager.cpp  DBusManager.h  DBusServer.cpp  DBusServer.h  DBusServerProxy.h  DbusClient.h  Makefile.am  dbus-crash-catcher.conf  marshal.c  marshal.h  test.cpp  test_client.cpp  test_server.cpp
lib/MiddleWare/: ABRTPlugin.cpp  ABRTPlugin.h  Action.h  Analyzer.h  Application.h  CrashCatcher.conf  CrashCatcherPlugin.cpp  CrashCatcherPlugin.h  CrashTypes.h  Database.h  DynamicLibrary.cpp  DynamicLibrary.h  Language.h  Makefile.am  MiddleWare.cpp  MiddleWare.h  MiddleWareTypes.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  RPM.cpp  RPM.h  RPMInfo.cpp  RPMInfo.h  Reporter.h  Settings.cpp  Settings.h  abrt.conf  crash-catcher.conf  test.cpp
lib/Plugins/: Bugzilla.GTKBuilder  Bugzilla.conf  Bugzilla.cpp  Bugzilla.glade  Bugzilla.h  CCpp.conf  CCpp.cpp  CCpp.h  CCpp_sha1.h  Catcut.GTKBuilder  Catcut.conf  Catcut.cpp  Catcut.h  FileTransfer.conf  FileTransfer.cpp  FileTransfer.h  Firefox.cpp  Firefox.h  Kerneloops.conf  Kerneloops.cpp  Kerneloops.h  KerneloopsDmesg.cpp  KerneloopsReporter.GTKBuilder  KerneloopsReporter.conf  KerneloopsReporter.cpp  KerneloopsReporter.h  KerneloopsScanner.conf  KerneloopsScanner.cpp  KerneloopsScanner.h  KerneloopsSysLog.cpp  KerneloopsSysLog.h  Logger.GTKBuilder  Logger.conf  Logger.cpp  Logger.h  Mailx.GTKBuilder  Mailx.conf  Mailx.cpp  Mailx.h  Makefile.am  (+38 more)
lib/Utils/: ABRTException.cpp  ABRTException.h  Action.h  Analyzer.h  CommLayerInner.cpp  CommLayerInner.h  CrashTypes.cpp  CrashTypesSocket.cpp  DBusCommon.h  Database.h  DebugDump.cpp  DebugDump.h  Makefile.am  Observer.h  Packages.cpp  Packages.h  Plugin.cpp  Plugin.h  Polkit.cpp  Polkit.h  Reporter.h  Settings.cpp  Settings.h  abrt_curl.cpp  abrt_curl.h  abrt_dbus.cpp  abrt_dbus.h  abrt_packages.cpp  abrt_packages.h  abrt_rh_support.cpp  abrt_rh_support.h  abrt_xmlrpc.cpp  abrt_xmlrpc.h  backtrace.c  backtrace.h  backtrace_parser.y  binhex.cpp  copyfd.cpp  daemon.cpp  dirsize.cpp  (+20 more)
lib/plugins/: Bugzilla.cpp  Bugzilla.h  CCpp.cpp  CCpp.h  CCpp_sha1.cpp  FileTransfer.cpp  FileTransfer.h  Kerneloops.conf  Kerneloops.cpp  Kerneloops.h  KerneloopsReporter.cpp  KerneloopsReporter.h  KerneloopsScanner.cpp  (+24 more)
libreport/: .gitignore  INSTALL  Makefile.am  README  autogen.sh  configure.ac  libreport.pc.in  libreport.spec
tests/: GList_append.supp  Makefile.am  abrt_conf.at  abrt_test.py  atlocal.in  hooklib.at  ignored_problems.at  integration.fmf  koops-parser.at  koops-test.h  local.at  pyhook.at  strbuf.at  testsuite.at  xorg-utils.at
(+2029 files in other folders)
